--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Gabrielito666/music-graph#readme",
   "dependencies": {
-    "dijkstrajs": "^1.0.3"
+    "dijkstrajs": "^1.0.3",
+    "sqlite-express": "^2.0.16"
   }
 }
