--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,7 +18,11 @@
   },
   "homepage": "https://github.com/Gabrielito666/music-graph#readme",
   "dependencies": {
+    "clipboardy": "^3.0.0",
     "dijkstrajs": "^1.0.3",
     "sqlite-express": "^2.0.16"
+  },
+  "bin": {
+    "musicGraph": "./index.js"
   }
 }
